--- a/base/normal_user.yaml
+++ b/base/normal_user.yaml
@@ -17,7 +17,8 @@ spec:
     spec:
       containers:
       - name: normal-user
-        image: normal-user:latest
+        image: asia-southeast1-docker.pkg.dev/even-acumen-386115/efiss/normal-user:latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 3001
           name: http
