--- a/base/product.yaml
+++ b/base/product.yaml
@@ -17,7 +17,8 @@ spec:
     spec:
       containers:
       - name: product
-        image: product:latest
+        image: asia-southeast1-docker.pkg.dev/even-acumen-386115/efiss/product:latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 50051
           name: grpc
