--- a/base/search.yaml
+++ b/base/search.yaml
@@ -17,7 +17,8 @@ spec:
     spec:
       containers:
       - name: search
-        image: search:latest
+        image: asia-southeast1-docker.pkg.dev/even-acumen-386115/efiss/search:latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 3001
           name: http
