--- a/base/normal_user.yaml
+++ b/base/normal_user.yaml
@@ -32,7 +32,10 @@ spec:
         - name: DATABASE_USER
           value: "root"
         - name: DATABASE_PASSWORD
-          value: "root"
+          valueFrom:
+            secretKeyRef:
+              name: efiss-secret
+              key: DATABASE_PASSWORD
         resources:
           limits:
             memory: "128Mi"
