--- a/base/auth.yaml
+++ b/base/auth.yaml
@@ -21,31 +21,13 @@ spec:
         imagePullPolicy: Always
         ports:
         - containerPort: 3001
-        env:
-        - name: DATABASE_HOST
-          value: "mysql.efiss.tech"
-        - name: DATABASE_PORT
-          value: "3306"
-        - name: DATABASE_USERNAME
-          valueFrom:
-            secretKeyRef:
-              name: efiss-secret
-              key: MYSQL_DATABASE_USERNAME
-        - name: DATABASE_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: efiss-secret
-              key: MYSQL_DATABASE_PASSWORD
-        - name: JWT_ACCESS_SECRET
-          valueFrom:
-            secretKeyRef:
-              name: efiss-secret
-              key: JWT_ACCESS_SECRET
-        - name: JWT_REFRESH_SECRET
-          valueFrom:
-            secretKeyRef:
-              name: efiss-secret
-              key: JWT_REFRESH_SECRET
+        envFrom:
+        - secretRef:
+            name: mysql-secret
+        - configmapRef:
+            name: mysql-config
+        - secretRef:
+            name: auth-secret
         resources:
           limits:
             memory: "128Mi"
