--- a/base/mailer.yaml
+++ b/base/mailer.yaml
@@ -22,17 +22,9 @@ spec:
         ports:
         - containerPort: 50051
           name: grpc
-        env:
-        - name: SMTP_USERNAME
-          valueFrom:
-            secretKeyRef:
-              name: efiss-secret
-              key: SMTP_USERNAME
-        - name: SMTP_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: efiss-secret
-              key: SMTP_PASSWORD
+        envFrom:
+        - secretRef:
+            name: mail-secret
         resources:
           limits:
             memory: "128Mi"
