--- a/base/configmap.yaml
+++ b/base/configmap.yaml
@@ -1,3 +1,10 @@
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: app-config
+data:
+  LISTEN_PORT: "3001"
+  CLIENT_URL: https://efiss.tech
 ---
 apiVersion: v1
 kind: ConfigMap
