--- a/base/product.yaml
+++ b/base/product.yaml
@@ -27,6 +27,8 @@ spec:
         envFrom:
         - secretRef:
             name: productdb-secret
+        - configmapRef:
+            name: app-config
         resources:
           limits:
             memory: "128Mi"
