add mailerService link to auth service

--- a/base/auth.yaml
+++ b/base/auth.yaml
@@ -33,6 +33,8 @@ spec:
             name: auth-secret
         - configmapRef:
             name: app-config
+        - configmapRef:
+            name: mailer-config
         resources:
           limits:
             memory: "128Mi"
