--- a/base/product.yaml
+++ b/base/product.yaml
@@ -49,3 +49,11 @@ spec:
   - protocol: TCP
     port: 50051
     targetPort: 50051
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: product-config
+data:
+  PRODUCT_SERVICE_GRPC_HOST: "product"
+  PRODUCT_SERVICE_GRPC_PORT: "50051"
