add ingress tls for HTTPS

--- a/base/ingress.yaml
+++ b/base/ingress.yaml
@@ -5,6 +5,10 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
+  tls:
+  - hosts:
+    - efiss.tech
+    secretName: efiss-tls
   rules:
   - host: efiss.tech
     http:
