--- a/base/mailer.yaml
+++ b/base/mailer.yaml
@@ -25,7 +25,7 @@ spec:
         envFrom:
         - secretRef:
             name: mail-secret
-        - configmapRef:
+        - configMapRef:
             name: app-config
         env:
         - name: REDIS_HOST
