--- a/base/mailer.yaml
+++ b/base/mailer.yaml
@@ -32,6 +32,10 @@ spec:
           value: mailer-redis
         - name: REDIS_PORT
           value: "6379"
+        - name: SMTP_HOST
+          value: smtp.gmail.com
+        - name: SMTP_PORT
+          value: "587"
         resources:
           limits:
             memory: "128Mi"
