--- a/base/auth.yaml
+++ b/base/auth.yaml
@@ -35,6 +35,9 @@ spec:
             name: app-config
         - configMapRef:
             name: mailer-config
+        env:
+        - name: DATABASE_NAME
+          value: efiss_auth
         resources:
           limits:
             memory: "128Mi"
