--- a/base/normal-user.yaml
+++ b/base/normal-user.yaml
@@ -31,6 +31,9 @@ spec:
             name: mysql-config
         - configMapRef:
             name: app-config
+        env:
+        - name: DATABASE_NAME
+          value: efiss_normal_user
         resources:
           limits:
             memory: "128Mi"
