--- a/.github/workflows/k8s-deploy-staging.yml
+++ b/.github/workflows/k8s-deploy-staging.yml
@@ -25,7 +25,7 @@ jobs:
       run: 'echo "$secret" > base/secret.yaml'
       shell: bash
       env:
-          secret: ${{ secrets.SECRET }}
+          secret: ${{ vars.SECRET }}
     
   deploy:
     runs-on: self-hosted
