--- a/base/normal-user.yaml
+++ b/base/normal-user.yaml
@@ -31,6 +31,10 @@ spec:
             name: mysql-config
         - configMapRef:
             name: app-config
+        - configMapRef:
+            name: product-config
+        - configMapRef:
+            name: auth-config
         env:
         - name: DATABASE_NAME
           value: efiss_normal_user
