--- a/base/auth.yaml
+++ b/base/auth.yaml
@@ -52,6 +52,9 @@ spec:
   - protocol: TCP
     port: 3000
     targetPort: 3000
+  - protocol: TCP
+    port: 50051
+    targetPort: 50051
 ---
 apiVersion: v1
 kind: ConfigMap
