--- a/base/product.yaml
+++ b/base/product.yaml
@@ -41,6 +41,9 @@ spec:
     app: product
   ports:
   - protocol: TCP
+    port: 3000
+    targetPort: 3000
+  - protocol: TCP
     port: 50051
     targetPort: 50051
 ---
