Update search.yaml to expose port

--- a/base/search.yaml
+++ b/base/search.yaml
@@ -73,6 +73,9 @@ spec:
   - protocol: TCP
     port: 3000
     targetPort: 3000
+  - protocol: TCP
+    port: 50051
+    targetPort: 50051
 ---
 apiVersion: apps/v1
 kind: Deployment
