--- a/base/mailer.yaml
+++ b/base/mailer.yaml
@@ -82,6 +82,19 @@ spec:
             cpu: "100m"
 ---
 apiVersion: v1
+kind: Service
+metadata:
+  name: mailer-redis
+spec:
+  type: ClusterIP
+  selector:
+    app: mailer-redis
+  ports:
+  - protocol: TCP
+    port: 6389
+    targetPort: 6379
+---
+apiVersion: v1
 kind: ConfigMap
 metadata:
   name: mailer-config
