Update auth.yaml with unique port name

--- a/base/auth.yaml
+++ b/base/auth.yaml
@@ -50,9 +50,11 @@ spec:
     app: auth
   ports:
   - protocol: TCP
+    name: http
     port: 3000
     targetPort: 3000
   - protocol: TCP
+    name: grpc
     port: 50051
     targetPort: 50051
 ---
