--- a/base/product.yaml
+++ b/base/product.yaml
@@ -41,9 +41,11 @@ spec:
     app: product
   ports:
   - protocol: TCP
+    name: http
     port: 3000
     targetPort: 3000
   - protocol: TCP
+    name: grpc
     port: 50051
     targetPort: 50051
 ---
