--- a/base/ingress.yaml
+++ b/base/ingress.yaml
@@ -3,7 +3,7 @@ kind: Ingress
 metadata:
   name: efiss-ingress
   annotations:
-    kubernetes.io/ingress.class: ingress-nginx
+    kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   ingressClassName: nginx
