--- a/environments/development/ingress.yaml
+++ b/environments/development/ingress.yaml
@@ -14,6 +14,48 @@ spec:
             name: ai
             port:
               number: 5000
+      - path: /admin(/|$)(.*)
+        pathType: Prefix
+        backend:
+          service:
+            name: admin
+            port:
+              number: 3000
+      - path: /auth(/|$)(.*)
+        pathType: Prefix
+        backend:
+          service:
+            name: auth
+            port:
+              number: 3000
+      - path: /product(/|$)(.*)
+        pathType: Prefix
+        backend:
+          service:
+            name: product
+            port:
+              number: 3000
+      - path: /search(/|$)(.*)
+        pathType: Prefix
+        backend:
+          service:
+            name: search
+            port:
+              number: 3000
+      - path: /normal-user(/|$)(.*)
+        pathType: Prefix
+        backend:
+          service:
+            name: normal-user
+            port:
+              number: 3000
+      - path: /ads(/|$)(.*)
+        pathType: Prefix
+        backend:
+          service:
+            name: ads
+            port:
+              number: 3000
   - host: k8s.efiss.tech
     http:
       paths:
@@ -24,3 +66,45 @@ spec:
             name: ai
             port:
               number: 5000
+      - path: /admin(/|$)(.*)
+        pathType: Prefix
+        backend:
+          service:
+            name: admin
+            port:
+              number: 3000
+      - path: /auth(/|$)(.*)
+        pathType: Prefix
+        backend:
+          service:
+            name: auth
+            port:
+              number: 3000
+      - path: /product(/|$)(.*)
+        pathType: Prefix
+        backend:
+          service:
+            name: product
+            port:
+              number: 3000
+      - path: /search(/|$)(.*)
+        pathType: Prefix
+        backend:
+          service:
+            name: search
+            port:
+              number: 3000
+      - path: /normal-user(/|$)(.*)
+        pathType: Prefix
+        backend:
+          service:
+            name: normal-user
+            port:
+              number: 3000
+      - path: /ads(/|$)(.*)
+        pathType: Prefix
+        backend:
+          service:
+            name: ads
+            port:
+              number: 3000
