rename to dev prod

--- a/environments/production/kustomization.yaml
+++ b/environments/production/kustomization.yaml
@@ -1,7 +1,6 @@
-namespace: production
-namePrefix: production-
+namespace: prod
+namePrefix: prod-
 resources:
 - ../../base
-- namespace.yaml
-patchesStrategicMerge:
-- namespace.yaml
+patches:
+- path: namespace.yaml
