--- a/environments/development/ingress.yaml
+++ b/environments/development/ingress.yaml
@@ -1,110 +1,20 @@
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: efiss-ingress
-spec:
-  rules:
-  - host: efiss.tech
-    http:
-      paths:
-      - path: /ai(/|$)(.*)
-        pathType: Prefix
-        backend:
-          service:
-            name: ai
-            port:
-              number: 5000
-      - path: /admin(/|$)(.*)
-        pathType: Prefix
-        backend:
-          service:
-            name: admin
-            port:
-              number: 3000
-      - path: /auth(/|$)(.*)
-        pathType: Prefix
-        backend:
-          service:
-            name: auth
-            port:
-              number: 3000
-      - path: /product(/|$)(.*)
-        pathType: Prefix
-        backend:
-          service:
-            name: product
-            port:
-              number: 3000
-      - path: /search(/|$)(.*)
-        pathType: Prefix
-        backend:
-          service:
-            name: search
-            port:
-              number: 3000
-      - path: /normal-user(/|$)(.*)
-        pathType: Prefix
-        backend:
-          service:
-            name: normal-user
-            port:
-              number: 3000
-      - path: /ads(/|$)(.*)
-        pathType: Prefix
-        backend:
-          service:
-            name: ads
-            port:
-              number: 3000
-  - host: k8s.efiss.tech
-    http:
-      paths:
-      - path: /ai(/|$)(.*)
-        pathType: Prefix
-        backend:
-          service:
-            name: ai
-            port:
-              number: 5000
-      - path: /admin(/|$)(.*)
-        pathType: Prefix
-        backend:
-          service:
-            name: admin
-            port:
-              number: 3000
-      - path: /auth(/|$)(.*)
-        pathType: Prefix
-        backend:
-          service:
-            name: auth
-            port:
-              number: 3000
-      - path: /product(/|$)(.*)
-        pathType: Prefix
-        backend:
-          service:
-            name: product
-            port:
-              number: 3000
-      - path: /search(/|$)(.*)
-        pathType: Prefix
-        backend:
-          service:
-            name: search
-            port:
-              number: 3000
-      - path: /normal-user(/|$)(.*)
-        pathType: Prefix
-        backend:
-          service:
-            name: normal-user
-            port:
-              number: 3000
-      - path: /ads(/|$)(.*)
-        pathType: Prefix
-        backend:
-          service:
-            name: ads
-            port:
-              number: 3000
+- op: add
+  path: /spec/rules/0/http/paths/0
+  value:
+    path: /ai(/|$)(.*)
+    pathType: Prefix
+    backend:
+      service:
+        name: ai
+        port:
+          number: 5000
+- op: add
+  path: /spec/rules/1/http/paths/0
+  value:
+    path: /ai(/|$)(.*)
+    pathType: Prefix
+    backend:
+      service:
+        name: ai
+        port:
+          number: 5000
