--- a/environments/development/kustomization.yaml
+++ b/environments/development/kustomization.yaml
@@ -6,3 +6,8 @@ resources:
 - namespace.yaml
 patches:
 - path: ingress.yaml
+  target:
+    group: networking.k8s.io
+    version: v1
+    kind: Ingress
+    name: ai
