--- a/base/ai.yaml
+++ b/base/ai.yaml
@@ -33,6 +33,11 @@ spec:
         - containerPort: 5000
           name: http
         resources:
+          requests:
+            memory: 512Mi
+            cpu: 1000m
+          limits:
+            memory: 512Mi
       restartPolicy: Always
 ---
 apiVersion: v1
