--- a/base/ingress.yaml
+++ b/base/ingress.yaml
@@ -3,6 +3,9 @@ kind: Ingress
 metadata:
   name: efiss-ingress
   annotations:
+    nginx.ingress.kubernetes.io/proxy-body-size: "500m"  # 500 MB image size limit
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"  # 10 minutes
+    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
