--- a/base/product.yaml
+++ b/base/product.yaml
@@ -19,6 +19,12 @@ spec:
       - name: product
         image: asia-southeast1-docker.pkg.dev/efiss-394203/efiss/product:latest
         imagePullPolicy: Always
+        livenessProbe:
+          httpGet:
+            path: /health
+            port: 3000
+          initialDelaySeconds: 30
+          timeoutSeconds: 120
         ports:
         - containerPort: 3000
           name: http
