missing ai-config ref from search to ai service

--- a/base/search.yaml
+++ b/base/search.yaml
@@ -35,6 +35,8 @@ spec:
             name: app-config
         - configMapRef:
             name: product-config
+        - configMapRef:
+            name: ai-config
         env:
         - name: PRODUCT_DATABASE_HOST
           valueFrom:
