add resource baseline request for AI service

--- a/base/ai.yaml
+++ b/base/ai.yaml
@@ -33,6 +33,9 @@ spec:
         - containerPort: 5000
           name: http
         resources:
+          requests:
+            cpu: 1500m
+            memory: 5Gi
       restartPolicy: Always
 ---
 apiVersion: v1
