--- a/.github/workflows/k8s-deploy-production.yml
+++ b/.github/workflows/k8s-deploy-production.yml
@@ -1,10 +1,6 @@
 name: Kubernetes Cluster Deployment staging
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
   workflow_dispatch:
 
 jobs:
@@ -28,7 +24,7 @@ jobs:
           secret: ${{ vars.SECRET }}
     
   deploy:
-    name: Deploy Staging
+    name: Deploy Production
     needs: setup
     runs-on: self-hosted
 
@@ -38,10 +34,10 @@ jobs:
       shell: bash
 
     - name: Apply changed kubernetes configs
-      run: kubectl apply -k environments/development/
+      run: kubectl apply -k environments/production
       shell: bash
 
     - name: Deploy changed microservices
       # https://stackoverflow.com/questions/40366192/kubernetes-how-to-make-deployment-to-update-image
-      run: kubectl -n dev rollout restart deployment
+      run: kubectl -n prod rollout restart deployment
       shell: bash
