--- a/.github/workflows/k8s-deploy-staging.yml
+++ b/.github/workflows/k8s-deploy-staging.yml
@@ -33,9 +33,9 @@ jobs:
     runs-on: self-hosted
 
     steps:
-    - name: Make sure ingress-nginx is configured
-      run: kubectl apply -k helm
-      shell: bash
+    # - name: Make sure ingress-nginx is configured
+    #   run: kubectl apply -k helm
+    #   shell: bash
 
     - name: Apply changed kubernetes configs
       run: kubectl apply -k environments/development/
