--- a/base/secret.yaml.example
+++ b/base/secret.yaml.example
@@ -1,10 +1,12 @@
+##############################
+# Project wide secrets
+##############################
 apiVersion: v1
 kind: Secret
 metadata:
   name: mysql-secret
 type: Opaque
 stringData:
-  DATABASE_HOST: 
   DATABASE_USERNAME: 
   DATABASE_PASSWORD: 
 ---
@@ -15,10 +17,14 @@ metadata:
 type: Opaque
 stringData:
   DATABASE_HOST: 
-  DATABASE_PORT: 
-  DATABASE_NAME: 
-  DATABASE_USERNAME: 
+  DATABASE_PORT: ""
+  DATABASE_NAME: efiss
+  DATABASE_USERNAME: efiss
   DATABASE_PASSWORD: 
+
+##############################
+# Service specific secrets
+##############################
 ---
 apiVersion: v1
 kind: Secret
@@ -28,6 +34,31 @@ type: Opaque
 stringData:
   JWT_ACCESS_SECRET: 
   JWT_REFRESH_SECRET: 
+  DATABASE_HOST: 
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: ads-secret
+type: Opaque
+stringData:
+  DATABASE_HOST: 
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: admin-secret
+type: Opaque
+stringData:
+  DATABASE_HOST: 
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: normal-user-secret
+type: Opaque
+stringData:
+  DATABASE_HOST: 
 ---
 apiVersion: v1
 kind: Secret
@@ -37,3 +68,11 @@ type: Opaque
 stringData:
   SMTP_USERNAME: 
   SMTP_PASSWORD: 
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: ai-secret
+type: Opaque
+stringData:
+  MILVUS_HOST: 
