--- a/base/configmap.yaml
+++ b/base/configmap.yaml
@@ -13,7 +13,7 @@ metadata:
   name: mysql-config
 data:
   DATABASE_TYPE: mysql
-  DATABASE_PORT: "3306"
+  # DATABASE_PORT: "3306"
 ---
 apiVersion: v1
 kind: ConfigMap
