--- a/scripts/local/docker-compose.yml
+++ b/scripts/local/docker-compose.yml
@@ -75,4 +75,4 @@ services:
     ports:
       - "9999:80"
     volumes:
-      - ${THUMBNAIL_LOCATION}:/usr/share/nginx/html:ro 
+      - ${THUMBNAIL_LOCATION}:/usr/share/nginx/html/data/product_images:ro 
