mount as both product_images and thumbnail

--- a/scripts/local/docker-compose.yml
+++ b/scripts/local/docker-compose.yml
@@ -76,3 +76,4 @@ services:
       - "9999:80"
     volumes:
       - ${THUMBNAIL_LOCATION}:/usr/share/nginx/html/efiss/data/product_images:ro 
+      - ${THUMBNAIL_LOCATION}:/usr/share/nginx/html/efiss/data/thumbnail:ro 
