--- a/base/data-manager-portal.yaml
+++ b/base/data-manager-portal.yaml
@@ -18,7 +18,7 @@ spec:
       containers:
       - name: data-manager-portal
         image: asia-southeast1-docker.pkg.dev/efiss-duong/efiss/local-data-manager-portal:latest
-        imagePullPolicy: Always
+        imagePullPolicy: Never
         ports:
         - containerPort: 80
           name: http
