--- a/base/mailer.yaml
+++ b/base/mailer.yaml
@@ -18,7 +18,7 @@ spec:
       containers:
       - name: mailer
         image: asia-southeast1-docker.pkg.dev/efiss-duong/efiss/mailer:latest
-        imagePullPolicy: Always
+        imagePullPolicy: Never
         ports:
         - containerPort: 50051
           name: grpc
