--- a/base/search.yaml
+++ b/base/search.yaml
@@ -18,7 +18,7 @@ spec:
       containers:
       - name: search
         image: asia-southeast1-docker.pkg.dev/efiss-duong/efiss/search:latest
-        imagePullPolicy: Always
+        imagePullPolicy: Never
         livenessProbe:
           httpGet:
             path: /health
