--- a/base/ai.yaml
+++ b/base/ai.yaml
@@ -27,7 +27,13 @@ spec:
           httpGet:
             path: /ping
             port: 5000
-          initialDelaySeconds: 900
+          initialDelaySeconds: 120
+          timeoutSeconds: 120
+        readinessProbe:
+          httpGet:
+            path: /ping
+            port: 5000
+          initialDelaySeconds: 120
           timeoutSeconds: 120
         env:
         - name: MILVUS_PORT
