--- a/base/product.yaml
+++ b/base/product.yaml
@@ -25,6 +25,12 @@ spec:
             port: 3000
           initialDelaySeconds: 120
           timeoutSeconds: 120
+        readinessProbe:
+          httpGet:
+            path: /health
+            port: 3000
+          initialDelaySeconds: 120
+          timeoutSeconds: 120
         ports:
         - containerPort: 3000
           name: http
